--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "eslint-config-holy-grail": "^5.0.0",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-githooks": "^0.6.0",
     "grunt-mocha-test": "^0.12.7",
     "gruntify-eslint": "^2.0.0",
