--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "yakbak": "^2.5.0"
   },
-  "description": "A Karma preprocessor for yakbak.",
+  "description": "!!! DEPRECATED !!! A Karma preprocessor for yakbak.",
   "devDependencies": {
     "chai": "^4.1.2",
     "eslint": "^4.12.1",
